--- a/DegreeWork_01.csproj
+++ b/DegreeWork_01.csproj
@@ -32,6 +32,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CUETools.Codecs">
+      <HintPath>C:\Users\Liuba\Desktop\SpeachRecognition\SpeechRecognizer\libs\CUETools.Codecs.dll</HintPath>
+    </Reference>
+    <Reference Include="CUETools.Codecs.FLAKE">
+      <HintPath>C:\Users\Liuba\Desktop\SpeachRecognition\SpeechRecognizer\libs\CUETools.Codecs.FLAKE.dll</HintPath>
+    </Reference>
+    <Reference Include="NAudio">
+      <HintPath>libs\NAudio.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>libs\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -45,22 +58,38 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BrowserControl.cs" />
+    <Compile Include="ContactList.cs" />
+    <Compile Include="ContactSkype.cs" />
+    <Compile Include="Engine.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form2.Designer.cs">
+      <DependentUpon>Form2.cs</DependentUpon>
+    </Compile>
     <Compile Include="IPWorker.cs" />
+    <Compile Include="JsonWorker.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Remind.cs" />
     <Compile Include="RemindControl.cs" />
+    <Compile Include="RemindRange.cs" />
     <Compile Include="SkypeControl.cs" />
+    <Compile Include="SpeechRecognizer.cs" />
     <Compile Include="SystemControl.cs" />
     <Compile Include="TownsDatabase.cs" />
     <Compile Include="XmlWorker.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form2.resx">
+      <DependentUpon>Form2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
